--- a/twitter.css
+++ b/twitter.css
@@ -67,3 +67,13 @@
   color: #2b7bb9;
   text-decoration: underline;
 }
+
+
+.footer {
+  left: 0px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 200px;
+  background-color: #DBDBE2;
+}
