--- a/twitter.css
+++ b/twitter.css
@@ -1,3 +1,6 @@
+body,html {
+  height: 100%;
+}
 #user {
   margin-left: 60px;
 }
@@ -68,6 +71,9 @@
   text-decoration: underline;
 }
 
+.twitter {
+  padding-bottom: 200px;
+}
 
 .footer {
   left: 0px;
