--- a/twitter.css
+++ b/twitter.css
@@ -83,3 +83,23 @@ body,html {
   height: 200px;
   background-color: #DBDBE2;
 }
+
+.ticker {
+  margin: 0 auto;
+  padding: 10px;
+  width: 600px;
+  text-align: left;
+  border: #ccc 1px solid;
+  position: relative;
+  overflow: hidden;
+}
+
+.ticker ul {
+  width: 100%;
+  position: relative;
+}
+
+.ticker ul li {
+  width: 100%;
+  display: none;
+}
