--- a/css/twitter.css
+++ b/css/twitter.css
@@ -6,35 +6,6 @@ body, html {
   height: 100%;
 }
 
-#text {
-  display: inline-block;
-  font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif;
-  font-size: 16px;
-  line-height: 16px;
-  border-color: #eee #ddd #bbb;
-  border-radius: 5px;
-  border-style: solid;
-  border-width: 1px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
-  margin: 10px 5px;
-  padding: 16px 16px 16px 16px;
-  max-width: 468px;
-}
-
-#breaking_text {
-  display: inline-block;
-  font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif;
-  font-size: 16px;
-  font-weight: bold;
-  line-height: 16px;
-  border-color: red;
-  border-radius: 5px;
-  border-style: double;
-  margin: 10px 5px;
-  padding: 16px 16px 16px 16px;
-  max-width: 468px;
-}
-
 p {
   font-size: 16px;
   font-weight: normal;
@@ -48,8 +19,41 @@ a {
   outline: 0 none;
 }
 
+#text {
+  display: inline-block;
+  font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif;
+  font-size: 16px;
+  line-height: 16px;
+  border-color: #eee #ddd #bbb;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-left: 10px;
+  padding: 16px 16px 16px 16px;
+  max-width: 468px;
+}
+
+#breaking_text {
+  display: inline-block;
+  font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif;
+  font-size: 16px;
+  line-height: 16px;
+  border-color: red;
+  border-radius: 5px;
+  border-style: double;
+  margin-top: 0px;
+  margin-left: 5px;
+  margin-left: 10px;
+  padding: 16px 16px 16px 16px;
+  max-width: 468px;
+}
+
+
 #attached_image {
-  padding-left: 65px;
+  padding-left: 70px;
   padding-bottom: 10px;
 }
 
@@ -64,6 +68,8 @@ a:focus {
   font-size: 14px;
   text-decoration: none;
   outline: 0 none;
+  margin-top: 3px;
+  margin-bottom: 5px;
   margin-left: 60px;
 }
 
@@ -99,7 +105,7 @@ a:focus {
 }
 
 .ticker {
-  padding: 10px;
+  padding: 5px;
   width: 600px;
   text-align: left;
 }
