--- a/css/twitter.css
+++ b/css/twitter.css
@@ -40,6 +40,7 @@ a {
   display: inline-block;
   font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif;
   font-size: 16px;
+  font-weight: bold;
   line-height: 16px;
   border-color: red;
   border-radius: 5px;
